--- a/src/app/applications/datatarget/fiware/fiware-edit/fiware-edit.component.html
+++ b/src/app/applications/datatarget/fiware/fiware-edit/fiware-edit.component.html
@@ -107,7 +107,7 @@
     </div>
     <div class="form-group mt-3 col-12">
       <label class="form-label" for="clientSecret">{{'QUESTION.GIVE-DATATARGET-CLIENTSECRET' | translate}}</label>
-      <input type="text"
+      <input type="password"
              class="form-control" id="clientSecret" name="clientSecret" required
              [(ngModel)]="datatarget.clientSecret"
              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('clientSecret'), 'is-valid' : formFailedSubmit && !errorFields.includes('clientSecret')}">
