fix: roboto font and datepipe type

--- a/src/assets/scss/setup/_material-theme.scss
+++ b/src/assets/scss/setup/_material-theme.scss
@@ -124,7 +124,7 @@ $OS2IoT-frontend-theme: mat-light-theme(
 }
 
 .mat-header-cell {
-  font-family: roboto-light;
+  font-family: roboto;
   font-weight: 300;
   font-size: 15px;
   line-height: 24px;
