fix: sass division deprecation

--- a/src/assets/scss/setup/_base.scss
+++ b/src/assets/scss/setup/_base.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 @import 'variables';
 @import 'breakpoints';
 @import 'fonts';
@@ -8,9 +10,8 @@
 @import '~bootstrap/scss/variables';
 
 
-
 @function strip-unit($value) {
-  @return $value / ($value * 0 + 1);
+  @return math.div($value, ($value * 0 + 1));
 }
 
 @mixin fluid-type($min-vw, $max-vw, $min-font-size, $max-font-size) {
