--- a/src/assets/scss/setup/_variables.scss
+++ b/src/assets/scss/setup/_variables.scss
@@ -335,7 +335,7 @@ $button-secondary-focus-border-color: $button-secondary-hover-border-color !defa
 //box-shadow
 $box-shadow: $color-black-001 !default;
 
-// // /*################################# ###########################*/
+// // __<<ngThemingMigrationEscapedComment1>>__
 
 //############################### Old stuff - needs to be replaced with the above code ####################
 //#########################################################################################################
