--- a/src/assets/scss/setup/_material-theme.scss
+++ b/src/assets/scss/setup/_material-theme.scss
@@ -1,20 +1,21 @@
+@use '~@angular/material' as mat;
 @import '~@angular/material/theming';
 @import 'variables';
-@include mat-core();
+@include mat.core();
 
 /* ======== angular material custom theme ======== */
-$OS2IoT-primary: mat-palette($mat-orange);
-$OS2IoT-accent: mat-palette($mat-deep-orange, 100, 500, A100);
-$OS2IoT-warn: mat-palette($mat-red);
+$OS2IoT-primary: mat.define-palette(mat.$orange-palette);
+$OS2IoT-accent: mat.define-palette(mat.$deep-orange-palette, 100, 500, A100);
+$OS2IoT-warn: mat.define-palette(mat.$red-palette);
 
 // Light theme
-$OS2IoT-theme: mat-light-theme($OS2IoT-primary, $OS2IoT-accent, $OS2IoT-warn);
+$OS2IoT-theme: mat.define-light-theme($OS2IoT-primary, $OS2IoT-accent, $OS2IoT-warn);
 
 // Dark theme
-$OS2IoT-theme: mat-dark-theme($OS2IoT-primary, $OS2IoT-accent, $OS2IoT-warn);
+$OS2IoT-theme: mat.define-dark-theme($OS2IoT-primary, $OS2IoT-accent, $OS2IoT-warn);
 
 // Main theme defination
-@include angular-material-theme($OS2IoT-theme);
+@include mat.all-component-themes($OS2IoT-theme);
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
@@ -24,20 +25,20 @@ $OS2IoT-theme: mat-dark-theme($OS2IoT-primary, $OS2IoT-accent, $OS2IoT-warn);
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat-core();
+@include mat.core();
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$OS2IoT-frontend-primary: mat-palette($mat-deep-orange);
+$OS2IoT-frontend-primary: mat.define-palette(mat.$deep-orange-palette);
 //$OS2IoT-frontend-accent: mat-palette($mat-pink, A200, A100, A400);
-$OS2IoT-frontend-accent: mat-palette($mat-deep-orange, A200, A100, A400);
+$OS2IoT-frontend-accent: mat.define-palette(mat.$deep-orange-palette, A200, A100, A400);
 
 // The warn palette is optional (defaults to red).
-$OS2IoT-frontend-warn: mat-palette($mat-red);
+$OS2IoT-frontend-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object (a Sass map containing all of the palettes).
-$OS2IoT-frontend-theme: mat-light-theme(
+$OS2IoT-frontend-theme: mat.define-light-theme(
   $OS2IoT-frontend-primary,
   $OS2IoT-frontend-accent,
   $OS2IoT-frontend-warn
@@ -46,7 +47,7 @@ $OS2IoT-frontend-theme: mat-light-theme(
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
-@include angular-material-theme($OS2IoT-frontend-theme);
+@include mat.all-component-themes($OS2IoT-frontend-theme);
 
 ////////////////////////////// CHECKBOX  ///////////////////////////////////////////
 
