--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -40,7 +40,7 @@
             <label class="form-label" for="user">{{'PERMISSION.EDIT.USERS' | translate}}</label>
             <mat-select [formControl]="userMultiCtrl" placeholder="" [multiple]="true" panelClass="overflow-x-hidden"
                 [(value)]="permission.userIds" name="users" #multiSelect [compareWith]="compare">
-                <mat-select-search [formControl]="userMultiFilterCtrl"></mat-select-search>
+                <app-mat-select-search [formControl]="userMultiFilterCtrl"></app-mat-select-search>
                 <mat-option *ngFor="let user of filteredUsersMulti | async" [value]="user.id">
                     {{getTextForUser(user)}}
                 </mat-option>
@@ -70,7 +70,7 @@
                 <mat-select [formControl]="applicationMultiCtrl" placeholder="" [multiple]="true"
                     panelClass="overflow-x-hidden" [(value)]="permission.applicationIds" id="applicationIds"
                     name="applicationIds" #multiSelect [compareWith]="compare">
-                    <mat-select-search [formControl]="applicationMultiFilterCtrl"></mat-select-search>
+                    <app-mat-select-search [formControl]="applicationMultiFilterCtrl"></app-mat-select-search>
                     <mat-option *ngFor="let app of filteredApplicationsMulti | async" [value]="app.id">
                         {{app.name}}
                     </mat-option>
