--- a/src/app/admin/users/new-kombit-user-page/new-user.component.html
+++ b/src/app/admin/users/new-kombit-user-page/new-user.component.html
@@ -49,9 +49,9 @@
               panelClass="overflow-x-hidden"
               aria-required="true"
             >
-              <mat-select-search
+              <app-mat-select-search
                 [formControl]="organisationsFilterCtrl"
-              ></mat-select-search>
+              ></app-mat-select-search>
 
               <mat-option
                 *ngFor="let org of filteredOrganisations | async"
