deps(build): upgrade angular to v13

--- a/src/app/admin/api-key/api-key-list/api-key-table/api-key-table.component.html
+++ b/src/app/admin/api-key/api-key-list/api-key-table/api-key-table.component.html
@@ -72,7 +72,7 @@
               </a>
             </li>
             <li class="dropdown-item">
-              <a (click)="deleteApiKey(element.id)" [routerLink]=""
+              <a (click)="deleteApiKey(element.id)" [routerLink]="[]"
                 >{{ 'API-KEY.TABLE-ROW.DELETE' | translate }}
               </a>
             </li>
