--- a/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
+++ b/src/app/admin/permission/permission-list/permission-tabel/permission-tabel.component.html
@@ -70,7 +70,7 @@
                         </li>
                         <li class="dropdown-item">
                             <a (click)="deletePermission(element.id)"
-                                [routerLink]="">{{ 'PERMISSION.TABLE-ROW.DELETE' | translate }}
+                                [routerLink]="[]">{{ 'PERMISSION.TABLE-ROW.DELETE' | translate }}
                             </a>
                         </li>
                     </ul>
