--- a/src/app/admin/users/user-list/awaiting-users-table/awaiting-users-table.component.html
+++ b/src/app/admin/users/user-list/awaiting-users-table/awaiting-users-table.component.html
@@ -68,7 +68,7 @@
               </a>
             </li>
             <li class="dropdown-item">
-              <a (click)="rejectUser(element.id, element.requestedOrganization.id)" [routerLink]="">{{
+              <a (click)="rejectUser(element.id, element.requestedOrganization.id)" [routerLink]="[]">{{
                 'USERS.TABLE-ROW.REJECT' | translate
               }}</a>
             </li>
