--- a/src/app/applications/applications-list/applications-table/applications-table.component.html
+++ b/src/app/applications/applications-list/applications-table/applications-table.component.html
@@ -45,7 +45,7 @@
               </li>
               <li class="dropdown-item">
                 <a (click)="deleteApplication(element.id)"
-                  [routerLink]="">{{ 'APPLICATION-TABLE-ROW.DELETE' | translate }}</a>
+                  [routerLink]="[]">{{ 'APPLICATION-TABLE-ROW.DELETE' | translate }}</a>
               </li>
             </ul>
           </div>
