--- a/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
+++ b/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
@@ -102,7 +102,7 @@
               </a>
             </li>
             <li class="dropdown-item">
-              <a (click)="clickDelete(element)" [routerLink]="">{{ 'IOTDEVICE-TABLE-ROW.DELETE' | translate }}</a>
+              <a (click)="clickDelete(element)" [routerLink]="[]">{{ 'IOTDEVICE-TABLE-ROW.DELETE' | translate }}</a>
             </li>
           </ul>
         </div>
