--- a/src/app/applications/multicast/multicast-table/multicast-table.component.html
+++ b/src/app/applications/multicast/multicast-table/multicast-table.component.html
@@ -38,7 +38,7 @@
                   routerLinkActive="active">{{ 'GEN.EDIT' | translate }}</a>
               </li>
               <li class="dropdown-item">
-                <a (click)="deleteMulticast(element)" [routerLink]="">{{ 'GEN.DELETE' | translate }}</a>
+                <a (click)="deleteMulticast(element)" [routerLink]="[]">{{ 'GEN.DELETE' | translate }}</a>
               </li>
             </ul>
           </div>
