--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -83,7 +83,7 @@
                                 translate }}</a>
                         </li>
                         <li class="dropdown-item">
-                            <a (click)="clickDelete(element)" [routerLink]="">{{ 'GEN.DELETE' | translate }}</a>
+                            <a (click)="clickDelete(element)" [routerLink]="[]">{{ 'GEN.DELETE' | translate }}</a>
                         </li>
                     </ul>
                 </div>
