--- a/src/app/admin/organisation/organisation-list/organisation-tabel/organisation-tabel.component.html
+++ b/src/app/admin/organisation/organisation-list/organisation-tabel/organisation-tabel.component.html
@@ -46,7 +46,7 @@
                         </li>
                         <li class="dropdown-item">
                             <a (click)="clickDelete(element)"
-                                [routerLink]="">{{ 'ORGANISATION-TABLE-ROW.DELETE' | translate }}
+                                [routerLink]="[]">{{ 'ORGANISATION-TABLE-ROW.DELETE' | translate }}
                             </a>
                         </li>
                     </ul>
