--- a/src/app/device-model/device-model-table/device-model-table.component.html
+++ b/src/app/device-model/device-model-table/device-model-table.component.html
@@ -39,7 +39,7 @@
                                 routerLinkActive="active">{{ 'GEN.EDIT' | translate }}</a>
                         </li>
                         <li class="dropdown-item">
-                            <a (click)="clickDelete(element)" [routerLink]="">{{ 'GEN.DELETE' | translate }}</a>
+                            <a (click)="clickDelete(element)" [routerLink]="[]">{{ 'GEN.DELETE' | translate }}</a>
                         </li>
                     </ul>
                 </div>
