fix: most tilde deprecation in scss

--- a/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.scss
+++ b/src/app/applications/iot-devices/iot-device-detail/iot-device-detail.component.scss
@@ -1,5 +1,5 @@
-@import '~src/assets/scss/setup/breakpoints';
-@import '~src/assets/scss/setup/variables';
+@import 'src/assets/scss/setup/breakpoints';
+@import 'src/assets/scss/setup/variables';
 
 .iot-device-component {
   width: 100%;
