--- a/src/assets/scss/components/_bulk-import.scss
+++ b/src/assets/scss/components/_bulk-import.scss
@@ -1,5 +1,5 @@
-@import '~src/assets/scss/setup/utilities';
-@import '~src/assets/scss/setup/variables';
+@import 'src/assets/scss/setup/utilities';
+@import 'src/assets/scss/setup/variables';
 
 $fa-font-path : '~@fortawesome/fontawesome-free/webfonts';
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
