--- a/src/assets/scss/components/_topbar.scss
+++ b/src/assets/scss/components/_topbar.scss
@@ -1,6 +1,6 @@
-@import '~src/assets/scss/setup/breakpoints';
-@import '~src/assets/scss/setup/variables';
-@import '~bootstrap/scss/variables';
+@import 'src/assets/scss/setup/breakpoints';
+@import 'src/assets/scss/setup/variables';
+@import 'bootstrap/scss/variables';
 @import '../setup/utilities';
 
 .top-bar-wrapper {
