--- a/src/assets/scss/setup/_breakpoints.scss
+++ b/src/assets/scss/setup/_breakpoints.scss
@@ -2,7 +2,7 @@
 //###########################################################################
 
 //Bootstrap
-@import '~bootstrap/scss/mixins';
+@import 'bootstrap/scss/mixins';
 @import 'variables';
 
 
