--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,8 @@
 //Animate.css
-@import '~animate.css/animate.min';
+@import 'animate.css/animate.min';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap.scss';
+@import 'bootstrap/scss/bootstrap.scss';
 
 //Animations
 @import 'assets/scss/animation/jumping-dots';
