--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,5 @@
-@import '~src/assets/scss/setup/breakpoints';
-@import '~src/assets/scss/setup/variables';
+@import 'src/assets/scss/setup/breakpoints';
+@import 'src/assets/scss/setup/variables';
 
 #content {
   @media(min-width: $screen-md-min) {
