--- a/src/app/shared/components/forms/form-header/form-header.component.scss
+++ b/src/app/shared/components/forms/form-header/form-header.component.scss
@@ -1,5 +1,5 @@
-@import '~src/assets/scss/setup/breakpoints';
-@import '~src/assets/scss/setup/variables';
+@import 'src/assets/scss/setup/breakpoints';
+@import 'src/assets/scss/setup/variables';
 
 .forms-header {
   background-color: $white;
