--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -1,6 +1,6 @@
-@import '~src/assets/scss/setup/breakpoints';
-@import '~src/assets/scss/setup/variables';
-@import '~src/assets/scss/setup/utilities';
+@import 'src/assets/scss/setup/breakpoints';
+@import 'src/assets/scss/setup/variables';
+@import 'src/assets/scss/setup/utilities';
 
 .navbar {
   top: 0;
