--- a/src/assets/scss/setup/_base.scss
+++ b/src/assets/scss/setup/_base.scss
@@ -6,8 +6,8 @@
 
 // Bootstrap
 
-@import '~bootstrap/scss/functions';
-@import '~bootstrap/scss/variables';
+@import 'bootstrap/scss/functions';
+@import 'bootstrap/scss/variables';
 
 
 @function strip-unit($value) {
