--- a/src/assets/scss/setup/_material-theme.scss
+++ b/src/assets/scss/setup/_material-theme.scss
@@ -125,7 +125,7 @@ $OS2IoT-frontend-theme: mat.define-light-theme(
 }
 
 .mat-header-cell {
-  font-family: roboto;
+  font-family: roboto-light;
   font-weight: 300;
   font-size: 15px;
   line-height: 24px;
