--- a/src/app/applications/datatarget/fiware/fiware-edit/fiware-edit.component.html
+++ b/src/app/applications/datatarget/fiware/fiware-edit/fiware-edit.component.html
@@ -92,23 +92,26 @@
              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('authorizationHeader'), 'is-valid' : formFailedSubmit && !errorFields.includes('authorizationHeader')}">
     </div>
     <div class="form-group mt-3 col-12">
-      <label class="form-label" for="tokenEndpoint">{{'QUESTION.GIVE-DATATARGET-TOKENENDPOINT' | translate}}</label>
+      <label class="form-label" for="tokenEndpoint">{{'FIWARE.QUESTION.GIVE-DATATARGET-TOKENENDPOINT' | translate}}</label>
       <input type="text"
              class="form-control" id="tokenEndpoint" name="tokenEndpoint" required
+             [placeholder]="'FIWARE.QUESTION.GIVE-DATATARGET-TOKENENDPOINT-PLACEHOLDER' | translate"
              [(ngModel)]="datatarget.tokenEndpoint"
              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('tokenEndpoint'), 'is-valid' : formFailedSubmit && !errorFields.includes('tokenEndpoint')}">
     </div>
     <div class="form-group mt-3 col-12">
-      <label class="form-label" for="clientId">{{'QUESTION.GIVE-DATATARGET-CLIENTID' | translate}}</label>
+      <label class="form-label" for="clientId">{{'FIWARE.QUESTION.GIVE-DATATARGET-CLIENTID' | translate}}</label>
       <input type="text"
              class="form-control" id="clientId" name="clientId" required
+             [placeholder]="'FIWARE.QUESTION.GIVE-DATATARGET-CLIENTID-PLACEHOLDER' | translate"
              [(ngModel)]="datatarget.clientId"
              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('clientId'), 'is-valid' : formFailedSubmit && !errorFields.includes('clientId')}">
     </div>
     <div class="form-group mt-3 col-12">
-      <label class="form-label" for="clientSecret">{{'QUESTION.GIVE-DATATARGET-CLIENTSECRET' | translate}}</label>
+      <label class="form-label" for="clientSecret">{{'FIWARE.QUESTION.GIVE-DATATARGET-CLIENTSECRET' | translate}}</label>
       <input type="password"
              class="form-control" id="clientSecret" name="clientSecret" required
+             [placeholder]="'FIWARE.QUESTION.GIVE-DATATARGET-CLIENTSECRET-PLACEHOLDER' | translate"
              [(ngModel)]="datatarget.clientSecret"
              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('clientSecret'), 'is-valid' : formFailedSubmit && !errorFields.includes('clientSecret')}">
     </div>
