Correction of deprecated link to description of Fiware device model

--- a/src/app/device-model/device-model-edit/device-model-edit.component.html
+++ b/src/app/device-model/device-model-edit/device-model-edit.component.html
@@ -166,7 +166,7 @@
 
     <div class="row mb-2">
         <div class="form-group mt-3 col-12">
-            <a href="https://fiware-datamodels.readthedocs.io/en/latest/Device/DeviceModel/doc/spec/index.html" target="_blank">
+            <a href="https://github.com/smart-data-models/dataModel.Device" target="_blank">
                 {{'QUESTION.DEVICE-MODEL.FIWARE-LINK-TEXT' | translate}}
             </a> 
         </div>
