--- a/src/app/admin/users/user-list/user-list.component.html
+++ b/src/app/admin/users/user-list/user-list.component.html
@@ -14,7 +14,7 @@
               [component]="true"
               [title]="'USERS.EXISTING-USERS' | translate"
             ></app-top-bar-table>
-            <app-user-table></app-user-table>
+            <app-user-table [organizationId]="organizationId" *ngIf="organizationId"></app-user-table>
           </div>
         </mat-tab>
         <mat-tab label="{{ 'USERS.AWAITING-USERS' | translate }}">
