--- a/src/app/applications/datatarget/fiware/fiware-edit/fiware-edit.component.html
+++ b/src/app/applications/datatarget/fiware/fiware-edit/fiware-edit.component.html
@@ -85,11 +85,35 @@
 
   <div class="row mb-2">
     <div class="form-group mt-3 col-12">
-        <label class="form-label" for="authorizationHeader">{{'QUESTION.GIVE-DATATARGET-AUTHORIZATIONHEADER' | translate}}</label>
-        <input type="text"
-          class="form-control" id="authorizationHeader" name="authorizationHeader" required
-          [(ngModel)]="datatarget.authorizationHeader"
-          [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('authorizationHeader'), 'is-valid' : formFailedSubmit && !errorFields.includes('authorizationHeader')}">
+      <label class="form-label" for="authorizationHeader">{{'QUESTION.GIVE-DATATARGET-AUTHORIZATIONHEADER' | translate}}</label>
+      <input type="text"
+             class="form-control" id="authorizationHeader" name="authorizationHeader" required
+             [(ngModel)]="datatarget.authorizationHeader"
+             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('authorizationHeader'), 'is-valid' : formFailedSubmit && !errorFields.includes('authorizationHeader')}">
+    </div>
+    <div class="form-group mt-3 col-12">
+      <label class="form-label" for="tokenEndpoint">{{'FIWARE.QUESTION.GIVE-DATATARGET-TOKENENDPOINT' | translate}}</label>
+      <input type="text"
+             class="form-control" id="tokenEndpoint" name="tokenEndpoint" required
+             [placeholder]="'FIWARE.QUESTION.GIVE-DATATARGET-TOKENENDPOINT-PLACEHOLDER' | translate"
+             [(ngModel)]="datatarget.tokenEndpoint"
+             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('tokenEndpoint'), 'is-valid' : formFailedSubmit && !errorFields.includes('tokenEndpoint')}">
+    </div>
+    <div class="form-group mt-3 col-12">
+      <label class="form-label" for="clientId">{{'FIWARE.QUESTION.GIVE-DATATARGET-CLIENTID' | translate}}</label>
+      <input type="text"
+             class="form-control" id="clientId" name="clientId" required
+             [placeholder]="'FIWARE.QUESTION.GIVE-DATATARGET-CLIENTID-PLACEHOLDER' | translate"
+             [(ngModel)]="datatarget.clientId"
+             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('clientId'), 'is-valid' : formFailedSubmit && !errorFields.includes('clientId')}">
+    </div>
+    <div class="form-group mt-3 col-12">
+      <label class="form-label" for="clientSecret">{{'FIWARE.QUESTION.GIVE-DATATARGET-CLIENTSECRET' | translate}}</label>
+      <input type="password"
+             class="form-control" id="clientSecret" name="clientSecret" required
+             [placeholder]="'FIWARE.QUESTION.GIVE-DATATARGET-CLIENTSECRET-PLACEHOLDER' | translate"
+             [(ngModel)]="datatarget.clientSecret"
+             [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('clientSecret'), 'is-valid' : formFailedSubmit && !errorFields.includes('clientSecret')}">
     </div>
     <div *ngIf="datatargetid === 0">
       <h6> {{'QUESTION.DATATARGET.RELATIONS' | translate}} </h6>
