Added single error message to KombitUserCreateSite

--- a/src/app/admin/users/new-kombit-user-page/new-user.component.html
+++ b/src/app/admin/users/new-kombit-user-page/new-user.component.html
@@ -13,6 +13,9 @@
               <li *ngFor="let error of errorMessages">
                 {{ error | translate }}
               </li>
+              <li *ngIf="errorMessage">
+                {{errorMessage | translate}}
+            </li>
             </ul>
           </div>
           <div class="form-group mt-3">
