--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -20,7 +20,9 @@
         <div class="jumbotron jumbotron--m-left jumbotron--full-width">
           <div *ngIf="gateway.location; else locationElseBlock">
             <h3>{{ 'GATEWAY.LOCATION' | translate }}</h3>
-            <app-map [coordinates]="getCoordinates()"></app-map>
+            <div class="thirty-height">
+              <app-map [coordinates]="getCoordinates()"></app-map>
+            </div>
             <div class="row">
               <div class="col-4">
                 <p><strong>{{ 'GATEWAY.LONGITUDE' | translate }}</strong>
