Updated most dropdowns to sort by name

--- a/src/app/admin/users/user-list/awaiting-users-table/awaiting-users-table.component.html
+++ b/src/app/admin/users/user-list/awaiting-users-table/awaiting-users-table.component.html
@@ -9,7 +9,7 @@
     mat-table
     [dataSource]="users"
     matSort
-    matSortActive="id"
+    matSortActive="name"
     matSortDirection="asc"
     matSortDisableClear
   >
