--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -10,7 +10,7 @@
                 {{ 'LORA-GATEWAY-TABLE.NAME' | translate }}
             </th>
             <td mat-cell *matCellDef="let element">
-                <a [routerLink]="['gateway-detail', element.id]" routerLinkActive="active" class="application-link">
+                <a [routerLink]="'/gateways/gateway-detail/' + element.id" routerLinkActive="active" class="application-link">
                     {{ element.name }}
                 </a>
             </td>
