Refactored application details to use routing

--- a/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
+++ b/src/app/applications/iot-devices/iot-devices-table/iot-devices-table.component.html
@@ -16,7 +16,7 @@
         {{ 'APPLICATION-TABLE.NAME' | translate }}
       </th>
       <td mat-cell *matCellDef="let element">
-        <a [routerLink]="['iot-device', element.id]" routerLinkActive="active" class="device-link">{{element.name}}</a>
+        <a [routerLink]="['../iot-device', element.id]" routerLinkActive="active" class="device-link">{{element.name}}</a>
       </td>
     </ng-container>
 
