--- a/src/app/applications/application-detail/application-detail.component.html
+++ b/src/app/applications/application-detail/application-detail.component.html
@@ -30,68 +30,14 @@
         </div>
       </div>
     </div>
-    <mat-tab-group animationDuration="200ms">
-      <mat-tab label="{{'APPLICATION.IOT-DEVICES' | translate}}">
-        <div class="jumbotron--table">
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="jumbotron">
-                <div *ngIf="canEdit else readOnly">
-                  <app-top-bar-table [component]="true" [title]="'APPLICATION.ATTACHED-IOT' | translate"
-                    [ctaLabelPrimary]="'FORM.CREATE-NEW-IOT-DEVICE' | translate" [ctaRouterLinkPrimary]="'new-iot-device'"
-                    [ctaLabelSecondary]="'APPLICATION.IMPORT-CSV' | translate" [ctaRouterLinkSecondary]="'bulk-import'">
-                  </app-top-bar-table>
-                </div>
-                <ng-template #readOnly>
-                  <app-top-bar-table [component]="true" [title]="'APPLICATION.ATTACHED-IOT' | translate">
-                  </app-top-bar-table>
-                </ng-template>
-                <app-iot-devices-table [applicationId]="id"></app-iot-devices-table>
-              </div>
-            </div>
-          </div>
-        </div>
-      </mat-tab>
-      <mat-tab label="{{'APPLICATION.MULTICAST-GROUPS' | translate}}">
-        <div class="jumbotron--table">
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="jumbotron">
-                <div *ngIf="canEdit else readOnly">
-                  <app-top-bar-table [component]="true" [title]="'APPLICATION.MULTICAST-SHOW' | translate"
-                  [ctaLabelPrimary]="'FORM.CREATE-NEW-MULTICAST' | translate" [ctaRouterLinkPrimary]="'multicast-edit'">
-                  </app-top-bar-table>
-                </div>
-                <ng-template #readOnly>
-                  <app-top-bar-table [component]="true" [title]="'APPLICATION.ATTACHED-IOT' | translate">
-                  </app-top-bar-table>
-                </ng-template>
-                  <app-multicast-table></app-multicast-table>
-              </div>
-            </div>
-          </div>
-        </div>
-      </mat-tab>
-      <mat-tab label="{{'APPLICATION.DATATARGET-SHOW' | translate}}">
-        <div class="jumbotron--table">
-          <div class="row">
-            <div class="col-sm-12">
-              <div class="jumbotron">
-                <div *ngIf="canEdit else readOnly">
-                  <app-top-bar-table [component]="true" [title]="'APPLICATION.DATATARGET-SHOW' | translate"
-                  [ctaLabelPrimary]="'FORM.CREATE-NEW-DATATARGET' | translate" [ctaRouterLinkPrimary]="'datatarget-new'">
-                  </app-top-bar-table>
-                </div>
-                <ng-template #readOnly>
-                  <app-top-bar-table [component]="true" [title]="'APPLICATION.ATTACHED-IOT' | translate">
-                  </app-top-bar-table>
-                </ng-template>
-                  <app-datatarget-table [pageLimit]="pageLimit"></app-datatarget-table>
-              </div>
-            </div>
-          </div>
-        </div>
-      </mat-tab>
-    </mat-tab-group>
+    <nav mat-tab-nav-bar>
+      <a mat-tab-link
+         *ngFor="let link of navTabs"
+         [routerLink]="link.link"
+         routerLinkActive #rla="routerLinkActive"
+         [active]="rla.isActive"
+         >{{ link.label | translate }}</a>
+    </nav>
+    <router-outlet></router-outlet>
   </div>
 </div>
