--- a/src/app/applications/datatarget/datatarget-table/datatarget-table.component.html
+++ b/src/app/applications/datatarget/datatarget-table/datatarget-table.component.html
@@ -10,7 +10,7 @@
         {{ 'DATATARGET-TABLE.NAME' | translate }}
       </th>
       <td mat-cell *matCellDef="let element">
-        <a [routerLink]="['datatarget', element.id]" routerLinkActive="active"
+        <a [routerLink]="['../datatarget', element.id]" routerLinkActive="active"
           class="application-link">{{element.name}}</a>
       </td>
     </ng-container>
