--- a/src/app/admin/users/user-list/user-list.component.html
+++ b/src/app/admin/users/user-list/user-list.component.html
@@ -7,26 +7,15 @@
 <div class="container-fluid">
   <div class="row">
     <div class="col-12">
-      <mat-tab-group animationDuration="200ms">
-        <mat-tab label="{{ 'USERS.EXISTING-USERS' | translate }}">
-          <div class="jumbotron--table">
-            <app-top-bar-table
-              [component]="true"
-              [title]="'USERS.EXISTING-USERS' | translate"
-            ></app-top-bar-table>
-            <app-user-table [organizationId]="organizationId" *ngIf="organizationId"></app-user-table>
-          </div>
-        </mat-tab>
-        <mat-tab label="{{ 'USERS.AWAITING-USERS' | translate }}">
-          <div class="jumbotron--table">
-            <app-top-bar-table
-              [component]="true"
-              [title]="'USERS.AWAITING-USERS' | translate"
-            ></app-top-bar-table>
-            <app-awaiting-users-table></app-awaiting-users-table>
-          </div>
-        </mat-tab>
-      </mat-tab-group>
+      <nav mat-tab-nav-bar>
+        <a mat-tab-link
+           *ngFor="let link of navTabs"
+           [routerLink]="link.link"
+           routerLinkActive #rla="routerLinkActive"
+           [active]="rla.isActive"
+        >{{ link.label | translate }}</a>
+      </nav>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
