--- a/src/app/applications/multicast/multicast-table/multicast-table.component.html
+++ b/src/app/applications/multicast/multicast-table/multicast-table.component.html
@@ -34,7 +34,7 @@
               [attr.aria-label]="'MULTICAST-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
             <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
               <li class="dropdown-item">
-                <a [routerLink]="['multicast-edit', element.id]"
+                <a [routerLink]="['../multicast-edit', element.id]"
                   routerLinkActive="active">{{ 'GEN.EDIT' | translate }}</a>
               </li>
               <li class="dropdown-item">
