--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -79,7 +79,7 @@
                     <ul class="dropdown-menu dropdown-menu--table"
                         attr.aria-labelledby="tableRowDropdown-{{ element.id }}">
                         <li class="dropdown-item">
-                            <a [routerLink]="['gateway-edit', element.id]" routerLinkActive="active">{{ 'GEN.EDIT' |
+                            <a [routerLink]="['../gateway-edit', element.id]" routerLinkActive="active">{{ 'GEN.EDIT' |
                                 translate }}</a>
                         </li>
                         <li class="dropdown-item">
