--- a/src/app/applications/datatarget/datatarget-table/datatarget-table.component.html
+++ b/src/app/applications/datatarget/datatarget-table/datatarget-table.component.html
@@ -34,7 +34,7 @@
             [attr.aria-label]="'DATATARGET-TABLE-ROW.SHOW-OPTIONS' | translate"></a>
           <ul class="dropdown-menu dropdown-menu--table" attr.aria-labelledby="tableRowDropdown-{{element.id}}">
             <li class="dropdown-item">
-              <a [routerLink]="['datatarget-edit', element.id]"
+              <a [routerLink]="['../datatarget-edit', element.id]"
                 routerLinkActive="active">{{ 'GEN.EDIT' | translate }}</a>
             </li>
             <li class="dropdown-item">
